button color created html1 comment out and in stylesheet link in html

--- a/Parcel-frontend/index1.html
+++ b/Parcel-frontend/index1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel= "stylesheet" type= "text/css" href="style.css">
     <title>Document</title>
 </head>
 
@@ -17,11 +18,13 @@
         </div>
         
         <div class="Question_Choices">        
-            <button class="options w3-button w3-block">
-            <p>A: I have little to no experience</p></button>
-            <button class="option w3-button w3 block"><p>B: I have some experience with video </p></button>
+            <button class="option">
+                <p>A: I have little to no experience</p></button>
+            <button class="option">
+                <p>B: I have some experience with video </p></button>
             </button>
-            <button class="options w3-button w3-block"><p>C: Text for now</p></button>
+            <button class="option">
+                <p>C: Text for now</p></button>
         
         </div>
 
