controller handles aesthetic and gameId, app.js updated to capture values

--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -32,9 +32,11 @@
   
     <nav>
         <ul>
+            <li>
+                <img id='logo' src=''>
+            </li>
             <li id = 'nav_home'>Home</li>
             <li id = 'nav_quiz'>Take quiz</li>
-            <li id = 'nav_about'>About</li>
             <li id = 'nav_login'>Login</li>
         </ul>   
                                     
