first commit to branch

--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Hero Match</h1>
+        <h1>Hero Match</h1>>
         <span>Find Your Gaming Character</span>   
     </header>
 </br>
