added note, refactoring

--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -10,8 +10,11 @@
 </head>
 <body>
     <header>
-        <h1>Hero Match</h1>>
-        <span>Find Your Gaming Character</span>   
+        <div id="HS">
+
+            <h1>Hero Match</h1>
+            <span>Find Your Gaming Character</span>   
+        </div>
     </header>
 </br>
     <section id="about">
