--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -7,6 +7,7 @@
     <title>Hero Match</title>
     <link rel= "stylesheet" type= "text/css" href="./style.css"> 
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Grenze&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Cinzel&display=swap" rel="stylesheet">
 </head>
 <body>
     <section id="quiz">
