--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -7,7 +7,7 @@
     <title>Hero Match</title>
     <link rel= "stylesheet" type= "text/css" href="./style.css"> 
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Grenze&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Cinzel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Geo|Gugi|Josefin+Sans|Russo+One|Sail|Sirin+Stencil|Stalinist+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <section id="quiz">
@@ -33,7 +33,7 @@
             </li> -->
             <li id = 'nav_home'>Home</li>
             <li id = 'nav_quiz'>Take quiz</li>
-            <li id = 'nav_login'>Login</li>
+            <li id = 'nav_about'>About</li>
         </ul>           
     </nav>    
 </div>
