added sliding elements to initial home page!

--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -12,10 +12,12 @@
 <body>
     <section id="quiz">
         <header>
-        <h1>Hero Match</h1>
-       
 
-            <span>Find Your Gaming Character</span>   
+        <div class= "slideWords">  
+        <h1 class="item1">Hero Match</h1>
+        <span class="item2">Find Your Gaming Character</span>
+        </div>          
+        <img class="item3" src="https://d1u1mce87gyfbn.cloudfront.net/hero/reaper/full-portrait.png" alt="image of Reaper from Overwatch game">   
        
     </header>
 </br>
