--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -31,6 +31,7 @@
                 <img id='logo' src=''> 
             </li> -->
             <li id = 'nav_home'>Home</li>
+            <li id= 'nav_games'>Games</li>
             <li id = 'nav_quiz'>Take quiz</li>
             <li id = 'nav_about'>About</li>
         </ul>           
