added icons to quiz and styling to handle inverting color

--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -17,7 +17,7 @@
                     <h1 class="item1">Hero Match</h1>
                     <span class="item2">Find Your Gaming Character</span>
                 </div>          
-                <img class="item3" src="https://d1u1mce87gyfbn.cloudfront.net/hero/reaper/full-portrait.png" alt="image of Reaper from Overwatch game">   
+                <img class="item3" src="https://d1u1mce87gyfbn.cloudfront.net/hero/reaper/full-portrait.png" alt="image of Reaper from Overwatch">   
             </div>             
        
     </header>
