added quiz buttons to start and home pages, styled buttons

--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -17,7 +17,8 @@
                     <h1 class="item1">Hero Match</h1>
                     <span class="item2">Find Your Gaming Character</span>
                 </div>          
-                <img class="item3" src="https://d1u1mce87gyfbn.cloudfront.net/hero/reaper/full-portrait.png" alt="image of Reaper from Overwatch">   
+                <img class="item3" src="https://d1u1mce87gyfbn.cloudfront.net/hero/reaper/full-portrait.png" alt="image of Reaper from Overwatch"> 
+                <button class="quiz-button slider-button" id="body_quiz">Find Your Hero</button>  
             </div>             
        
     </header>
@@ -35,7 +36,7 @@
             </li> -->
             <li id = 'nav_home'>Home</li>
             <li id= 'nav_games'>Games</li>
-            <li id = 'nav_quiz'>Take quiz</li>
+            <li id = 'nav_quiz'>Find Your Hero</li>
             <li id = 'nav_about'>About</li>
         </ul>           
     </nav>    
