extensive styling on buttons, single game, all characters and single character pages

--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -15,7 +15,8 @@
             <div class="slideStuff">
                 <div class= "slideWords">  
                     <div class='item1'>
-                        <h1>Hero</h1> <img src="./Images/HeroMatch-Logo.png"> <h1>Match</h1>
+                        <img src="./Images/HeroMatch-Logo.png"> 
+                        
                     </div>
                     <span class="item2">Find Your Gaming Character</span>
                 </div>          
