--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -15,12 +15,21 @@
             <div class="slideStuff">
                 <div class= "slideWords">  
                     <div class='item1'>
-                        <img src="./Images/HeroMatch-Logo.png"> 
-                        
+                        <img src="./Images/HeroMatch-Logo.png">                         
                     </div>
+
                     <span class="item2">Find Your Gaming Character</span>
+
+                    <div class='item4'>
+                        <img src="./Images/HeroMatch-Logo.png">                         
+                    </div>
+
+                    <span class="item5">Find Your Gaming Character</span>
+
                 </div>          
-                <img class="item3" src="https://d1u1mce87gyfbn.cloudfront.net/hero/reaper/full-portrait.png" alt="image of Reaper from Overwatch"> 
+                <img class="item3" src="https://d1u1mce87gyfbn.cloudfront.net/hero/reaper/full-portrait.png" alt="image of Reaper from Overwatch">
+                <img class="item6" src="https://d1u1mce87gyfbn.cloudfront.net/hero/dva/full-portrait.png" alt="image of D.Va from Overwatch">
+                 
                 <button class="quiz-button slider-button" id="body_quiz">Find Your Hero</button>  
             </div>
         </header>
