added anchor tags to certain buttons to snap to top of screen on click

--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Geo|Gugi|Josefin+Sans|Russo+One|Sail|Sirin+Stencil|Stalinist+One&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id='top'></div>
     <section id="quiz">
         <header>
             <div class="slideStuff">
