more characters in slider

--- a/Parcel-frontend/index.html
+++ b/Parcel-frontend/index.html
@@ -28,7 +28,9 @@
 
                 </div>          
                 <img class="item3" src="https://d1u1mce87gyfbn.cloudfront.net/hero/reaper/full-portrait.png" alt="image of Reaper from Overwatch">
-                <img class="item6" src="https://d1u1mce87gyfbn.cloudfront.net/hero/dva/full-portrait.png" alt="image of D.Va from Overwatch">
+                <img class="item6" src="./Images/volibear.png" alt="image of Volibear from League">
+                <img class="item8" src="https://d1u1mce87gyfbn.cloudfront.net/hero/dva/full-portrait.png" alt="image of D.Va from Overwatch">
+                <img class="item7" src="./Images/warwick.png" alt="image of Warwick from League">
                  
                 <button class="quiz-button slider-button" id="body_quiz">Find Your Hero</button>  
             </div>
@@ -37,9 +39,6 @@
     <div id="nav">
     <nav>
         <ul>
-            <!-- <li>
-                <img id='logo' src=''> 
-            </li> -->
             <li id = 'nav_home'>Home</li>
             <li id= 'nav_games'>Games</li>
             <li id = 'nav_quiz'>Find Your Hero</li>
